# predigy

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
.github/workflows/: ci.yml
crates/book/: Cargo.toml
crates/book/src/: lib.rs
crates/core/: Cargo.toml
crates/core/src/: fees.rs  fill.rs  intent.rs  lib.rs  market.rs  order.rs  position.rs  price.rs  side.rs
crates/engine-core/: Cargo.toml
crates/engine-core/src/: cross_strategy.rs  db.rs  discovery.rs  error.rs  events.rs  intent.rs  lib.rs  metrics.rs  oms.rs  state.rs  strategy.rs
crates/eval/: Cargo.toml
crates/eval/src/: diagnose.rs  ledger.rs  lib.rs  metrics.rs  optimize.rs  recommend.rs  report.rs  time_window.rs  types.rs
crates/ext-feeds/: Cargo.toml
crates/ext-feeds/src/: error.rs  lib.rs  nbm.rs  nbm_decode.rs  nbm_extract.rs  nws.rs  nws_forecast.rs
crates/ext-feeds/tests/: nbm_live.rs
crates/kalshi-exec/: Cargo.toml
crates/kalshi-exec/examples/: oms_fill_smoke.rs  oms_submit_smoke.rs
crates/kalshi-exec/src/: error.rs  executor.rs  lib.rs  mapping.rs
crates/kalshi-exec/tests/: http_mock.rs  oms_integration.rs
crates/kalshi-fix/: Cargo.toml
crates/kalshi-fix/src/: error.rs  executor.rs  frame.rs  lib.rs  messages.rs  session.rs  tags.rs
crates/kalshi-fix/tests/: loopback_session.rs
crates/kalshi-md/: Cargo.toml
crates/kalshi-md/examples/: authed_channels_probe.rs  ws_smoke.rs
crates/kalshi-md/src/: backoff.rs  client.rs  decode.rs  error.rs  lib.rs  messages.rs
crates/kalshi-md/tests/: loopback_session.rs  reconnect_replay.rs
crates/kalshi-rest/: Cargo.toml
crates/kalshi-rest/examples/: auth_smoke.rs  close_position.rs  smoke.rs
crates/kalshi-rest/src/: auth.rs  client.rs  error.rs  lib.rs  types.rs
crates/oms/: Cargo.toml
crates/oms/src/: cid.rs  executor.rs  kill_watcher.rs  lib.rs  persistence.rs  position_math.rs  record.rs  runtime.rs
crates/oms/tests/: runtime.rs
crates/poly-md/: Cargo.toml
crates/poly-md/src/: backoff.rs  client.rs  decode.rs  error.rs  lib.rs  messages.rs
crates/poly-md/tests/: loopback_session.rs  reconnect_replay.rs
crates/risk/: Cargo.toml
crates/risk/src/: engine.rs  lib.rs  limits.rs  state.rs
crates/signals/: Cargo.toml
crates/signals/src/: bayes.rs  elo.rs  kelly.rs  lib.rs
crates/sim/: Cargo.toml
crates/sim/src/: book_store.rs  executor.rs  lib.rs  matching.rs  queue.rs  replay.rs
crates/sim/tests/: arb_replay.rs
crates/strategies/book-imbalance/: Cargo.toml
crates/strategies/book-imbalance/src/: lib.rs
crates/strategies/book-maker/: Cargo.toml
crates/strategies/book-maker/src/: lib.rs
crates/strategies/cross-arb/: Cargo.toml
crates/strategies/cross-arb/src/: lib.rs
crates/strategies/implication-arb/: Cargo.toml
crates/strategies/implication-arb/src/: lib.rs
crates/strategies/internal-arb/: Cargo.toml
crates/strategies/internal-arb/src/: lib.rs
crates/strategies/latency/: Cargo.toml
crates/strategies/latency/src/: lib.rs
crates/strategies/news-trader/: Cargo.toml
crates/strategies/news-trader/src/: lib.rs
crates/strategies/settlement/: Cargo.toml
crates/strategies/settlement/src/: lib.rs
crates/strategies/stat/: Cargo.toml
crates/strategies/stat/src/: lib.rs
crates/strategies/variance-fade/: Cargo.toml
crates/strategies/variance-fade/src/: lib.rs
crates/strategies/wx-stat/: Cargo.toml
crates/strategies/wx-stat/src/: lib.rs
crates/venue-reconcile/: Cargo.toml
crates/venue-reconcile/src/: lib.rs
deploy/: README.md
deploy/linux/: cutover.sh  env.example  install-systemd.sh  rollback.sh
deploy/linux/systemd/: predigy-arb-config-curate.service  predigy-arb-config-curate.timer  predigy-calibration.service  predigy-calibration.timer  predigy-cross-arb-curate.service  predigy-cross-arb-curate.timer  predigy-dashboard.service  predigy-db-backup.service  predigy-db-backup.timer  predigy-engine.service  predigy-eval-daily.service  predigy-eval-daily.timer  predigy-opportunity-scanner.service  predigy-opportunity-scanner.timer  predigy-paper-trader.service  predigy-paper-trader.timer  predigy-stat-curate.service  predigy-stat-curate.timer
deploy/macos/: com.predigy.arb-config-curate.plist  com.predigy.calibration.plist  com.predigy.cross-arb-curate.plist  com.predigy.cross-arb.plist  com.predigy.dashboard.plist  com.predigy.engine.plist  com.predigy.eval-daily.plist  com.predigy.import.plist  com.predigy.latency-trader.plist  com.predigy.opportunity-scanner.plist  com.predigy.paper-trader.plist  com.predigy.settlement.plist  com.predigy.stat-curate.plist  com.predigy.stat-trader.plist  com.predigy.wx-curate.plist  com.predigy.wx-stat-curate.plist
deploy/scripts/: arb-config-curate.sh  cross-arb-curate.sh  cross-arb-run.sh  dashboard-run.sh  db-backup.sh  engine-run.sh  eval-daily.sh  install-launchd.sh  latency-trader-run.sh  opportunity-scanner-run.sh  predigy-calibration-run.sh  predigy-import-run.sh  predigy-paper-trader-run.sh  settlement-run.sh  stat-curate.sh  stat-trader-run.sh  wx-curate.sh  wx-stat-curate.sh
deploy/templates/: book-maker-config.example.json
docs/: ARCHITECTURE.md  AUDIT.md  AUDIT_2026-05-08.md  CUTOVER.md  DATABASE.md  DEPLOY.md  EVAL.md  EVAL_SPEC.md  KALSHI_FIX_REQUEST.md  PLAN.md  PROFITABILITY_AUDIT_PLAN.md  RUNBOOK.md  SESSIONS.md  STATE_LOG.md  STATUS.md  WX_STAT_NBM_PHASE2.md  WX_STAT_PLAN.md
migrations/: 0001_initial.sql  0002_leg_group.sql  0003_opportunity_observations_calibration_reports.sql  0004_paper_trades.sql  0005_intents_post_only.sql
plans/: 2026-05-08-fill-growth-calibration-plan.md  2026-05-08-news-trader-implementation.md  2026-05-10-strategic-roadmap.md
