[workspace]
resolver = "3"
members = [
    "crates/core",
    "crates/book",
    "crates/kalshi-rest",
    "crates/kalshi-md",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.94"
license = "UNLICENSED"
repository = "https://github.com/pourhadi/predigy"

[workspace.lints.rust]
unsafe_code = "forbid"
missing_debug_implementations = "warn"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
cast_possible_truncation = "allow"
cast_sign_loss = "allow"

[workspace.dependencies]
predigy-core = { path = "crates/core" }
predigy-book = { path = "crates/book" }
predigy-kalshi-rest = { path = "crates/kalshi-rest" }

serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tracing = "0.1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time", "sync", "net"] }
tokio-tungstenite = { version = "0.28", default-features = false, features = ["connect", "rustls-tls-webpki-roots"] }
futures-util = { version = "0.3", default-features = false, features = ["sink", "std"] }
http = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "http2", "gzip"] }
url = "2"
rsa = { version = "0.9", features = ["pem"] }
sha2 = "0.10"
base64 = "0.22"
rand = "0.8"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
debug = "line-tables-only"
panic = "abort"
strip = "symbols"
