[workspace]
resolver = "3"
members = [
    "crates/core",
    "crates/book",
    "crates/kalshi-rest",
    "crates/kalshi-md",
    "crates/poly-md",
    "crates/risk",
    "crates/oms",
    "crates/kalshi-exec",
    "crates/kalshi-fix",
    "crates/sim",
    "crates/ext-feeds",
    "crates/signals",
    "bin/md-recorder",
    "bin/arb-trader",
    "bin/sim-runner",
    "bin/cross-arb-trader",
    "bin/latency-trader",
    "bin/stat-trader",
    "bin/wx-curator",
    "bin/dashboard",
    "bin/settlement-trader",
    "bin/cross-arb-curator",
    "bin/stat-curator",
    "bin/wx-stat-curator",
    "bin/wx-stat-fit-calibration",
    "bin/predigy-import",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.94"
license = "UNLICENSED"
repository = "https://github.com/pourhadi/predigy"

[workspace.lints.rust]
unsafe_code = "forbid"
missing_debug_implementations = "warn"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
cast_possible_truncation = "allow"
cast_sign_loss = "allow"

[workspace.dependencies]
predigy-core = { path = "crates/core" }
predigy-book = { path = "crates/book" }
predigy-kalshi-rest = { path = "crates/kalshi-rest" }
predigy-kalshi-md = { path = "crates/kalshi-md" }
predigy-risk = { path = "crates/risk" }
predigy-oms = { path = "crates/oms" }
predigy-kalshi-exec = { path = "crates/kalshi-exec" }
predigy-sim = { path = "crates/sim" }
predigy-poly-md = { path = "crates/poly-md" }
predigy-ext-feeds = { path = "crates/ext-feeds" }
predigy-signals = { path = "crates/signals" }
predigy-kalshi-fix = { path = "crates/kalshi-fix" }
md-recorder = { path = "bin/md-recorder" }
latency-trader = { path = "bin/latency-trader" }
stat-trader = { path = "bin/stat-trader" }

serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt", "ansi", "env-filter"] }
clap = { version = "4", features = ["derive", "env"] }
anyhow = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time", "sync", "net", "fs", "signal", "io-util"] }
tokio-tungstenite = { version = "0.28", default-features = false, features = ["connect", "rustls-tls-webpki-roots"] }
futures-util = { version = "0.3", default-features = false, features = ["sink", "std"] }
http = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "http2", "gzip"] }
url = "2"
rsa = { version = "0.9", features = ["pem"] }
sha2 = "0.10"
base64 = "0.22"
rand = "0.8"
tempfile = "3"
axum = { version = "0.8", default-features = false, features = ["tokio", "http1", "json", "matched-path", "query", "tracing"] }

# Database stack — Postgres-only, peer auth via UNIX socket on
# the trading box. See docs/ARCHITECTURE.md "Database" section
# for rationale + connection convention.
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "tls-rustls", "postgres", "macros", "migrate", "chrono", "uuid", "json"] }
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
debug = "line-tables-only"
panic = "abort"
strip = "symbols"
