[workspace]
resolver = "3"
members = [
    "crates/core",
    "crates/book",
    "crates/kalshi-rest",
    "crates/kalshi-md",
    "crates/poly-md",
    "crates/risk",
    "crates/oms",
    "crates/kalshi-exec",
    "crates/kalshi-fix",
    "crates/sim",
    "crates/ext-feeds",
    "crates/signals",
    "crates/engine-core",
    "crates/strategies/stat",
    "bin/md-recorder",
    "bin/arb-trader",
    "bin/sim-runner",
    "bin/cross-arb-trader",
    "bin/latency-trader",
    "bin/stat-trader",
    "bin/wx-curator",
    "bin/dashboard",
    "bin/settlement-trader",
    "bin/cross-arb-curator",
    "bin/stat-curator",
    "bin/wx-stat-curator",
    "bin/wx-stat-fit-calibration",
    "bin/predigy-import",
    "bin/predigy-engine",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.94"
license = "UNLICENSED"
repository = "https://github.com/pourhadi/predigy"

[workspace.lints.rust]
# `deny` (not `forbid`) so test modules that need env::set_var or
# similar can `#[allow(unsafe_code)]` on the module.
unsafe_code = "deny"
missing_debug_implementations = "warn"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
cast_possible_truncation = "allow"
cast_sign_loss = "allow"
# Pedantic lints we treat as stylistic, not correctness:
#   cast_lossless    — `x as i64` is fine; explicit From only when grep-ability matters.
#   doc_markdown     — vendor names + types in prose without backticks are clearer.
#   needless_pass_by_value — fine for small Copy structs / configs.
#   too_many_arguments — production code DOES sometimes have wide signatures.
#   missing_fields_in_debug — finish_non_exhaustive() is not always more informative.
#   redundant_closure_for_method_calls — sometimes the closure is the readable form.
#   uninlined_format_args — `{}` with explicit args is fine when it improves readability.
cast_lossless = "allow"
doc_markdown = "allow"
needless_pass_by_value = "allow"
too_many_arguments = "allow"
missing_fields_in_debug = "allow"
redundant_closure_for_method_calls = "allow"
uninlined_format_args = "allow"
items_after_statements = "allow"
collapsible_if = "allow"
needless_borrow = "allow"
manual_let_else = "allow"
needless_borrows_for_generic_args = "allow"
ref_option = "allow"
result_large_err = "allow"
or_fun_call = "allow"
ignored_unit_patterns = "allow"
manual_is_multiple_of = "allow"
ref_as_ptr = "allow"
duration_subsec = "allow"
duration_suboptimal_units = "allow"
unnecessary_wraps = "allow"
single_match_else = "allow"
ignore_without_reason = "allow"
default_trait_access = "allow"
unchecked_time_subtraction = "allow"
unnecessary_map_or = "allow"
cast_possible_wrap = "allow"
similar_names = "allow"
large_enum_variant = "allow"
map_unwrap_or = "allow"
too_many_lines = "allow"
needless_continue = "allow"
trivially_copy_pass_by_ref = "allow"
elidable_lifetime_names = "allow"
manual_div_ceil = "allow"
useless_let_if_seq = "allow"
needless_lifetimes = "allow"
manual_ok_err = "allow"
needless_collect = "allow"
struct_field_names = "allow"
unused_self = "allow"
return_self_not_must_use = "allow"
match_same_arms = "allow"
single_match = "allow"
explicit_iter_loop = "allow"
unused_async = "allow"
let_underscore_untyped = "allow"

[workspace.dependencies]
predigy-core = { path = "crates/core" }
predigy-book = { path = "crates/book" }
predigy-kalshi-rest = { path = "crates/kalshi-rest" }
predigy-kalshi-md = { path = "crates/kalshi-md" }
predigy-risk = { path = "crates/risk" }
predigy-oms = { path = "crates/oms" }
predigy-kalshi-exec = { path = "crates/kalshi-exec" }
predigy-sim = { path = "crates/sim" }
predigy-poly-md = { path = "crates/poly-md" }
predigy-ext-feeds = { path = "crates/ext-feeds" }
predigy-signals = { path = "crates/signals" }
predigy-kalshi-fix = { path = "crates/kalshi-fix" }
predigy-engine-core = { path = "crates/engine-core" }
predigy-strategy-stat = { path = "crates/strategies/stat" }
md-recorder = { path = "bin/md-recorder" }
latency-trader = { path = "bin/latency-trader" }
stat-trader = { path = "bin/stat-trader" }

serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt", "ansi", "env-filter"] }
clap = { version = "4", features = ["derive", "env"] }
anyhow = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time", "sync", "net", "fs", "signal", "io-util"] }
tokio-tungstenite = { version = "0.28", default-features = false, features = ["connect", "rustls-tls-webpki-roots"] }
futures-util = { version = "0.3", default-features = false, features = ["sink", "std"] }
http = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "http2", "gzip"] }
url = "2"
rsa = { version = "0.9", features = ["pem"] }
sha2 = "0.10"
base64 = "0.22"
rand = "0.8"
tempfile = "3"
axum = { version = "0.8", default-features = false, features = ["tokio", "http1", "json", "matched-path", "query", "tracing"] }

# Database stack — Postgres-only, peer auth via UNIX socket on
# the trading box. See docs/ARCHITECTURE.md "Database" section
# for rationale + connection convention.
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "tls-rustls", "postgres", "macros", "migrate", "chrono", "uuid", "json"] }
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
debug = "line-tables-only"
panic = "abort"
strip = "symbols"
