[package]
name = "predigy-kalshi-exec"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
predigy-core = { workspace = true }
predigy-oms = { workspace = true }
predigy-kalshi-rest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
rand = { workspace = true }

[dev-dependencies]
predigy-risk = { workspace = true }
rsa = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "time", "sync", "net", "io-util"] }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
