[package]
name = "predigy-kalshi-rest"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
predigy-core = { workspace = true }
predigy-book = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
reqwest = { workspace = true }
url = { workspace = true }
rsa = { workspace = true }
sha2 = { workspace = true }
base64 = { workspace = true }
rand = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
