[package]
name = "predigy-oms"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
predigy-core = { workspace = true }
predigy-risk = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
predigy-risk = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "time", "sync"] }
tempfile = { workspace = true }
