[package]
name = "predigy-strategy-cross-arb"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
predigy-core = { workspace = true }
predigy-book = { workspace = true }
predigy-engine-core = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
async-trait = "0.1"
